# upwork__whatsapp_send

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_whatsapp_send.py
whatsapp_send/: main.py
