[tool.poetry]
name = "whatsapp_send"
version = "0.1.0"
description = ""
authors = ["Thomas Hornung <thomas.hornung@heraeus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.26.0"
pandas = "1.3.0"
pywhatkit = "5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
